Main page and first subpages menus updated with links to new Docs

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -154,9 +154,7 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li>
-						<div class="popupTrigger" data-popup-id="docs">Dokument</div>
-					</li>
+					<li><a href="../dokument/">Dokument</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
@@ -184,56 +182,29 @@
 					</svg></span></div>
 		</div>
 	</nav>
-
 	<!-- Sidebar -->
 	<nav class="sidebar white" data-sidebar-id="1">
-		<div class="close"><svg>
-				<use xmlns:xlink="https://www.w3.org/1999/xlink" xlink:href="#close"></use>
-			</svg></div>
+		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
 			<a href="../" class="logo"><img src="../assets/svg/bm_se_checkmark_color.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
 
-				<li>
-					<a href="../#tjanster">
-						<p>Tjänster</p>
-					</a>
-				</li>
+				<li><a href="../#tjanster"><p>Tjänster</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="../kontakt/">
-						<p>Kontakta oss</p>
-					</a>
-				</li>
+				<li><a href="../kontakt/"><p>Kontakta oss</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="../karriar/">
-						<p>Karriär</p>
-					</a>
-				</li>
+				<li><a href="../karriar/"><p>Karriär</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="../om_oss/">
-						<p>Om oss</p>
-					</a>
-				</li>
+				<li><a href="../om_oss/"><p>Om oss</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="../nyheter/">
-						<p>Nyheter</p>
-					</a>
-				</li>
+				<li><a href="../nyheter/"><p>Nyheter</p></a></li>
 				<br>
 				<br>
-				<li>
-					<div class="popupTrigger" data-popup-id="docs">
-						<p>Dokument</p>
-					</div>
-				</li>
+				<li><a href="../dokument/"><p>Dokument</p></a></li>
 				<br>
 				<br>
 				<li>
@@ -621,7 +592,7 @@ BFS 2011:6med ändringar till och med BFS 2015:3, BBR."
 					</li>
 					<!-- info card 2 -->
 					<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-						<a href="http://nordic.se" target="_blank" class="box-74">
+						<a href="https://nordic.se" target="_blank" class="box-74">
 							<div class="thumbnail-74">
 								<img src="../assets/img/logos/dokument/nordicforsakring_logo.png" class="center center-m-down" alt="Nordic Färskring och Riskhantering" />
 							</div>
