--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -99,7 +99,7 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><div class="popupTrigger" data-popup-id="docs">Dokument</div></li>
+					<li><a href="../dokument/">Dokument</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
@@ -148,7 +148,7 @@
 				<li><a href="../nyheter/"><p>Nyheter</p></a></li>
 				<br>
 				<br>
-				<li><div class="popupTrigger" data-popup-id="docs"><p>Dokument</p></div></li>
+				<li><a href="../dokument/"><p>Dokument</p></a></li>
 				<br>
 				<br>
 				<li>
