--- a/projekt/index.html
+++ b/projekt/index.html
@@ -23,10 +23,7 @@
 	<meta name="twitter:title" content="Översikt av våra projekt" />
 	<meta name="twitter:description" content="En översikt av projekt som är besiktade av Besiktningsman.se" />
 	<!-- Fonts and Material Icons -->
-
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
-
-
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- Google Tag Manager -->
@@ -101,7 +98,7 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><div class="popupTrigger" data-popup-id="docs">Dokument</div></li>
+					<li><a href="../dokument/">Dokument</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
