--- a/index.html
+++ b/index.html
@@ -115,9 +115,7 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li>
-						<div class="popupTrigger" data-popup-id="docs">Dokument</div>
-					</li>
+					<li><a href="dokument/">Dokument</a></li>
 					<li><a href="nyheter/">Nyheter</a></li>
 					<li><a href="om_oss/">Om oss</a></li>
 				</ul>
@@ -140,54 +138,29 @@
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
 	</nav>
-
 	<!-- Sidebar -->
 	<nav class="sidebar white" data-sidebar-id="1">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
-			<a href="../" class="logo"><img src="assets/svg/bm_se_checkmark_color.svg" alt="Besiktningsman.se"></a>
+			<a href="../" class="logo"><img src="../assets/svg/bm_se_checkmark_color.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
 
-				<li>
-					<a href="#tjanster">
-						<p>Tjänster</p>
-					</a>
-				</li>
+				<li><a href="#tjanster"><p>Tjänster</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="kontakt/">
-						<p>Kontakta oss</p>
-					</a>
-				</li>
+				<li><a href="kontakt/"><p>Kontakta oss</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="karriar/">
-						<p>Karriär</p>
-					</a>
-				</li>
+				<li><a href="karriar/"><p>Karriär</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="om_oss/">
-						<p>Om oss</p>
-					</a>
-				</li>
+				<li><a href="om_oss/"><p>Om oss</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="nyheter/">
-						<p>Nyheter</p>
-					</a>
-				</li>
+				<li><a href="nyheter/"><p>Nyheter</p></a></li>
 				<br>
 				<br>
-				<li>
-					<div class="popupTrigger" data-popup-id="docs">
-						<p>Dokument</p>
-					</div>
-				</li>
+				<li><a href="dokument/"><p>Dokument</p></a></li>
 				<br>
 				<br>
 				<li>
