--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -99,7 +99,7 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><div class="popupTrigger" data-popup-id="docs">Dokument</div></li>
+					<li><a href="../dokument/">Dokument</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
@@ -123,64 +123,40 @@
 		</div>
 	</nav>
 
-<!-- Sidebar -->
-<nav class="sidebar white" data-sidebar-id="1">
-	<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
-	<div class="content">
-		<a href="../" class="logo"><img src="../assets/svg/bm_se_checkmark_color.svg" alt="Besiktningsman.se"></a>
-		<ul class="mainMenu text-blue">
-			<span class="bold small text-blueGrey">Navigation</span>
-			<li>
-				<a href="../#tjanster">
-					<p>Tjänster</p>
-				</a>
-			</li>
-			<br>
-			<br>
-			<li>
-				<a href="../kontakt/">
-					<p>Kontakta oss</p>
-				</a>
-			</li>
-			<br>
-			<br>
-			<li>
-				<a href="../karriar/">
-					<p>Karriär</p>
-				</a>
-			</li>
-			<br>
-			<br>
-			<li>
-				<a href="../om_oss/">
-					<p>Om oss</p>
-				</a>
-			</li>
-			<br>
-			<br>
-			<li>
-				<a href="../nyheter/">
-					<p>Nyheter</p>
-				</a>
-			</li>
-			<br>
-			<br>
-			<li>
-				<div class="popupTrigger" data-popup-id="docs">
-					<p>Dokument</p>
-				</div>
-			</li>
-			<br>
-			<br>
-			<li>
-				<a href="tel:0101654000">
-					<p class="bold">Telefon: 010-165 40 00</p>
-				</a>
-			</li>
-		</ul>
+	<!-- Sidebar -->
+	<nav class="sidebar white" data-sidebar-id="1">
+		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
+		<div class="content">
+			<a href="../" class="logo"><img src="../assets/svg/bm_se_checkmark_color.svg" alt="Besiktningsman.se"></a>
+			<ul class="mainMenu text-blue">
 
-	</div>
-</nav>
+				<li><a href="../#tjanster"><p>Tjänster</p></a></li>
+				<br>
+				<br>
+				<li><a href="../kontakt/"><p>Kontakta oss</p></a></li>
+				<br>
+				<br>
+				<li><a href="../karriar/"><p>Karriär</p></a></li>
+				<br>
+				<br>
+				<li><a href="../om_oss/"><p>Om oss</p></a></li>
+				<br>
+				<br>
+				<li><a href="../nyheter/"><p>Nyheter</p></a></li>
+				<br>
+				<br>
+				<li><a href="../dokument/"><p>Dokument</p></a></li>
+				<br>
+				<br>
+				<li>
+					<a href="tel:0101654000">
+						<p class="bold">Telefon: 010-165 40 00</p>
+					</a>
+				</li>
+			</ul>
+
+		</div>
+	</nav>
 	<!-- HEADER -->
 <div class="StripeBackground">
 	    <div class="stripe s0"></div>
