Services mobile menu links updated

--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -24,8 +24,6 @@
 	<meta name="twitter:description" content="För dig som ska bygga nytt, bygga till eller bygga om, erbjuder vi alla typer av opartiska besiktningstjänster samt även KA-Kontrollansvarig." />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
-
-
 	<!-- Styles -->
 	<link href="../../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- accordion styling -->
@@ -128,7 +126,6 @@
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
 	</nav>
-
 	<!-- Sidebar -->
 	<nav class="sidebar white" data-sidebar-id="1">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
@@ -136,46 +133,22 @@
 			<a href="../../" class="logo"><img src="../../assets/svg/bm_se_checkmark_color.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
 
-				<li>
-					<a href="../../#tjanster">
-						<p>Tjänster</p>
-					</a>
-				</li>
+				<li><a href="../../#tjanster"><p>Tjänster</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="../../kontakt/">
-						<p>Kontakta oss</p>
-					</a>
-				</li>
+				<li><a href="../../kontakt/"><p>Kontakta oss</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="../../karriar/">
-						<p>Karriär</p>
-					</a>
-				</li>
+				<li><a href="../../karriar/"><p>Karriär</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="../../om_oss/">
-						<p>Om oss</p>
-					</a>
-				</li>
+				<li><a href="../../om_oss/"><p>Om oss</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="../../nyheter/">
-						<p>Nyheter</p>
-					</a>
-				</li>
+				<li><a href="../../nyheter/"><p>Nyheter</p></a></li>
 				<br>
 				<br>
-				<li>
-					<div class="popupTrigger" data-popup-id="docs">
-						<p>Dokument</p>
-					</div>
-				</li>
+				<li><a href="../../dokument/"><p>Dokument</p></a></li>
 				<br>
 				<br>
 				<li>
