--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -167,9 +167,7 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li>
-						<div class="popupTrigger" data-popup-id="docs">Dokument</div>
-					</li>
+					<li><a href="../../dokument/">Dokument</a></li>
 					<li><a href="../../nyheter/">Nyheter</a></li>
 					<li><a href="../../om_oss/">Om oss</a></li>
 				</ul>
@@ -189,9 +187,7 @@
 			<div class="left">
 				<a href="../../"><img src="../../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
-			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
-						<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use>
-					</svg></span></div>
+			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
 	</nav>
 	<!-- Sidebar -->
