--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -101,9 +101,7 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li>
-						<div class="popupTrigger" data-popup-id="docs">Dokument</div>
-					</li>
+					<li><a href="../../dokument/">Dokument</a></li>
 					<li><a href="../../nyheter/">Nyheter</a></li>
 					<li><a href="../../om_oss/">Om oss</a></li>
 				</ul>
