conf pages link updated with 3 folders down reference instead of 5

--- a/tjanster/brf/bekraftelse/index.html
+++ b/tjanster/brf/bekraftelse/index.html
@@ -89,19 +89,19 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><a href="../../../../../dokument/">Dokument</a></li>
-					<li><a href="../../../../../nyheter/">Nyheter</a></li>
-					<li><a href="../../../../../om_oss/">Om oss</a></li>
+					<li><a href="../../../dokument/">Dokument</a></li>
+					<li><a href="../../../nyheter/">Nyheter</a></li>
+					<li><a href="../../../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
 			<div class="center">
-				<a href="../../../../../"> <img src="../../../../../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
+				<a href="../../../"> <img src="../../../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="../../../../../#tjanster">Tjänster</a></li>
-					<li><a href="../../../../../karriar/">Karriär</a></li>
-					<li><a href="../../../../../kontakt/" class="text-blue">Kontakta oss</a></li>
+					<li><a href="../../../#tjanster">Tjänster</a></li>
+					<li><a href="../../../karriar/">Karriär</a></li>
+					<li><a href="../../../kontakt/" class="text-blue">Kontakta oss</a></li>
 				</ul>
 			</div>
 		</div>
@@ -116,25 +116,25 @@
 	<nav class="sidebar white" data-sidebar-id="1">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
-			<a href="../../../../../" class="logo"><img src="../../../../../assets/svg/bm_se_checkmark_color.svg" alt="Besiktningsman.se"></a>
+			<a href="../../../" class="logo"><img src="../../../assets/svg/bm_se_checkmark_color.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
 
-				<li><a href="../../../../../#tjanster"><p>Tjänster</p></a></li>
+				<li><a href="../../../#tjanster"><p>Tjänster</p></a></li>
 				<br>
 				<br>
-				<li><a href="../../../../../kontakt/"><p>Kontakta oss</p></a></li>
+				<li><a href="../../../kontakt/"><p>Kontakta oss</p></a></li>
 				<br>
 				<br>
-				<li><a href="../../../../../karriar/"><p>Karriär</p></a></li>
+				<li><a href="../../../karriar/"><p>Karriär</p></a></li>
 				<br>
 				<br>
-				<li><a href="../../../../../om_oss/"><p>Om oss</p></a></li>
+				<li><a href="../../../om_oss/"><p>Om oss</p></a></li>
 				<br>
 				<br>
-				<li><a href="../../../../../nyheter/"><p>Nyheter</p></a></li>
+				<li><a href="../../../nyheter/"><p>Nyheter</p></a></li>
 				<br>
 				<br>
-				<li><a href="../../../../../dokument/"><p>Dokument</p></a></li>
+				<li><a href="../../../dokument/"><p>Dokument</p></a></li>
 				<br>
 				<br>
 				<li>
