Updated services subpages menu links

--- a/tjanster/entreprenad/forbesiktning/index.html
+++ b/tjanster/entreprenad/forbesiktning/index.html
@@ -73,14 +73,11 @@
 			<symbol id="arrow-right" viewBox="0 0 31 72"><path d="M1 0c.3 0 .6.1.8.4l29 34c.3.4.3.9 0 1.3l-29 36c-.3.4-1 .5-1.4.2-.4-.3-.5-1-.2-1.4l28.5-35.5-28.5-33.4c-.4-.4-.3-1.1.1-1.4.2-.1.5-.2.7-.2z"/></symbol>
 			<symbol id="drop-down" viewBox="0 0 16 16"><polyline stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" points="1,5 8,12 15,5" fill="none"></polyline></symbol>
 		</svg>
-	<!-- Panel Top #10 -->
 	<nav class="panel top forceMobileView white soft-shadow">
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li>
-						<div class="popupTrigger" data-popup-id="docs">Dokument</div>
-					</li>
+					<li><a href="../../../dokument/">Dokument</a></li>
 					<li><a href="../../../nyheter/">Nyheter</a></li>
 					<li><a href="../../../om_oss/">Om oss</a></li>
 				</ul>
@@ -98,64 +95,39 @@
 		</div>
 		<div class="sections compact hidden">
 			<div class="left">
-				<a href="../../../"><img src="../../../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
+				<a href="../../../../../"><img src="../../../../../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
 	</nav>
-
 	<!-- Sidebar -->
 	<nav class="sidebar white" data-sidebar-id="1">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
-			<a href="../../../" class="logo"><img src="../../../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
+			<a href="../../../" class="logo"><img src="../../../assets/svg/bm_se_checkmark_color.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
 
-				<li>
-					<a href="../../../#tjanster">
-						<p>Tjänster</p>
-					</a>
-				</li>
+				<li><a href="../../../#tjanster"><p>Tjänster</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="../../../kontakt/">
-						<p>Kontakta oss</p>
-					</a>
-				</li>
+				<li><a href="../../../kontakt/"><p>Kontakta oss</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="../../../karriar/">
-						<p>Karriär</p>
-					</a>
-				</li>
+				<li><a href="../../../karriar/"><p>Karriär</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="../../../om_oss/">
-						<p>Om oss</p>
-					</a>
-				</li>
+				<li><a href="../../../om_oss/"><p>Om oss</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="../../../nyheter/">
-						<p>Nyheter</p>
-					</a>
-				</li>
+				<li><a href="../../../nyheter/"><p>Nyheter</p></a></li>
 				<br>
 				<br>
-				<li>
-					<div class="popupTrigger" data-popup-id="docs">
-						<p>Dokument</p>
-					</div>
-				</li>
+				<li><a href="../../../dokument/"><p>Dokument</p></a></li>
 				<br>
 				<br>
 				<li>
 					<a href="tel:0101654000">
-						<p class="bold small">Telefon: 010-165 40 00</p>
+						<p class="bold">Telefon: 010-165 40 00</p>
 					</a>
 				</li>
 			</ul>
