--- a/projekt/index.html
+++ b/projekt/index.html
@@ -91,10 +91,9 @@
 	  <symbol id="drop-down" viewBox="0 0 16 16"><polyline stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" points="1,5 8,12 15,5" fill="none"></polyline></symbol>
 	  <symbol id="play" viewBox="0 0 30 30"><path d="M7 30v-30l22 15z"/></symbol>
 	</svg>
-
 	<!-- Panel Top #10 -->
 	<nav class="panel top forceMobileView white soft-shadow">
-
+		<!-- left menu nav -->
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
@@ -103,9 +102,12 @@
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
+
 			<div class="center">
 				<a href="../"> <img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
 			</div>
+
+			<!-- right menu nav -->
 			<div class="right">
 				<ul class="menu crop small bold">
 					<li><a href="../#tjanster">Tjänster</a></li>
@@ -121,6 +123,7 @@
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
 	</nav>
+
 	<!-- Sidebar -->
 	<nav class="sidebar white" data-sidebar-id="1">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
@@ -143,7 +146,7 @@
 				<li><a href="../nyheter/"><p>Nyheter</p></a></li>
 				<br>
 				<br>
-				<li><div class="popupTrigger" data-popup-id="docs"><p>Dokument</p></div></li>
+				<li><a href="../dokument/"><p>Dokument</p></a></li>
 				<br>
 				<br>
 				<li>
