Added text fixes and type form

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -333,7 +333,7 @@
 				</div>
 				<div class="Helm-SectionIntro__text">
 					<p class="jobs-IntroText Helm__text--slate3">
-						Vi erbjuder chansen att göra karriär inom ett snabbt växande företag som ligger på fronten av innovation inom byggbranschen.
+						Vi erbjuder chansen att göra karriär inom ett snabbt växande företag som ligger på fronten av innovation inom besiktningsbranschen.
 						Arbetet du gör hos oss är avgörande för att säkerställa säkra och välbyggda hem runtom i Sverige.
 					</p>
 				</div>
@@ -379,33 +379,35 @@
 			</div>
 		</div>
 	</section>
+
 <section class="OpenCTA">
   <div class="OpenCTA__content">
     <div class="OpenCTA__text">
       <h3 class="common-PageTitle Helm__text--white">Hjälp oss säkerställa Sveriges framtida byggkvalité</span></h3>
     </div>
     <div class="OpenCTA__cta">
-        							<a class="typeform-share common-Button text-blue" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank">Ta kontakt med oss!</a>
-											<script>
-												(function() {
-													var qs, js, q, s, d = document,
-														gi = d.getElementById,
-														ce = d.createElement,
-														gt = d.getElementsByTagName,
-														id = 'typef_orm_share',
-														b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
-													if (!gi.call(d, id)) {
-														js = ce.call(d, 'script');
-														js.id = id;
-														js.src = b + 'share.js';
-														q = gt.call(d, 'script')[0];
-														q.parentNode.insertBefore(js, q)
-													}
-												})()
-											</script>
+			<a class="typeform-share common-Button text-blue" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank">Ta kontakt med oss!</a>
+			<script>
+				(function() {
+					var qs, js, q, s, d = document,
+						gi = d.getElementById,
+						ce = d.createElement,
+						gt = d.getElementsByTagName,
+						id = 'typef_orm_share',
+						b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
+					if (!gi.call(d, id)) {
+						js = ce.call(d, 'script');
+						js.id = id;
+						js.src = b + 'share.js';
+						q = gt.call(d, 'script')[0];
+						q.parentNode.insertBefore(js, q)
+					}
+				})()
+			</script>
     </div>
   </div>
 </section>
+
 	<!-- HEADER -->
 	<section class="slide" id="career" style="background: transparent;">
 		<div class="content">
@@ -416,7 +418,7 @@
 					<div class="announcement">
 						<span class="new-pill">OBS</span>
 						<span class="message">
-							Vi söker även: <a href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank" class="typeform-share common-Link">Projektkoordinator</a>
+							Vi söker även: <a href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="drawer_left" target="_blank" class="typeform-share common-Link">Projektkoordinator</a>
 						</span>
 					</div>
 					<div class="pad shadow">
@@ -427,7 +429,7 @@
 							<p class="common-BodyText">• Arbeta i det företag som leder branschens förnyelse?</p>
 							<p class="common-BodyText">• Kunna belönas bra för ambitiösa arbetsinsatser?</p>
 							<p class="common-BodyText">• Bli medarbetare oavsett var i landet du bor?</p>
-							<a class="typeform-share common-Button blue" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank">Ta kontakt med oss!</a>
+							<a class="typeform-share common-Button blue" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="drawer_left" target="_blank">Ta kontakt med oss!</a>
 							<script>
 								(function() {
 									var qs, js, q, s, d = document,
