brf statusbesiktning page layout finished

--- a/tjanster/brf/statusbesiktning/index.html
+++ b/tjanster/brf/statusbesiktning/index.html
@@ -2,32 +2,30 @@
 <html lang="se">
 
 <head>
-	<title>Besiktningsman.se | Garantibesiktning BRF</title>
+	<title>Besiktningsman.se | Statusbesiktning BRF</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../../../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren? Då kan en garantibesiktning behövas." />
+	<meta name="description" content="Statusbesiktning Meta Description Text" />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Garantibesiktning ger din BRF trygghet genom att byggfel upptäcks innan garantitiden löper ut." />
-	<meta property="og:description" content="Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren? Då kan en garantibesiktning behövas." />
-	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/garantibesiktning" />
+	<meta property="og:title" content="Statusbesiktning OG: Title Text" />
+	<meta property="og:description" content="Statusbesiktning OG: Description Text" />
+	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/statusbesiktning" />
 	<meta property="og:site_name" content="https://www.besiktningsman.se">
 	<meta property="og:image" content="../../../assets/img/backgrounds/og_image.png" />
-	<meta name="twitter:title" content="Garantibesiktning ger din BRF trygghet genom att byggfel upptäcks innan garantitiden löper ut." />
-	<meta name="twitter:description" content="Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren? Då kan en garantibesiktning behövas." />
+	<meta name="twitter:title" content="Statusbesiktning twitter: Title Text" />
+	<meta name="twitter:description" content="Statusbesiktning twitter: Description Text" />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
 	<!-- Styles -->
 	<link href="../../../css/slides.css" rel="stylesheet" type="text/css">
-	<!-- accordion styling -->
-	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -131,9 +129,6 @@
 		<symbol id="drop-down" viewBox="0 0 16 16">
 			<polyline stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" points="1,5 8,12 15,5" fill="none"></polyline>
 		</symbol>
-		<symbol id="play" viewBox="0 0 30 30">
-			<path d="M7 30v-30l22 15z" />
-		</symbol>
 		<symbol id="arrow-left" viewBox="0 0 31 72">
 			<path d="M30 72c-.3 0-.6-.1-.8-.4l-29-34c-.3-.4-.3-.9 0-1.3l29-36c.3-.4 1-.5 1.4-.2.4.3.5 1 .2 1.4l-28.5 35.5 28.5 33.4c.4.4.3 1.1-.1 1.4-.2.1-.5.2-.7.2z" />
 		</symbol>
@@ -214,15 +209,14 @@
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<div class="bread-crumbs">
 							<a href="../../brf/">Bostadsrättsförening<i class="icono-arrow2-left"></i></a>
-							<span class="bread-crumbs-title xs-hide">Garantibesiktning</span>
+							<span class="bread-crumbs-title xs-hide">Statusbesiktning</span>
 						</div>
-						<h1 class="common-IntroText text-white">Garantibesiktning ger din BRF trygghet genom att byggfel upptäcks innan garantitiden löper ut.</h1>
+						<h1 class="common-IntroText text-white">Statusbesiktning är verktyget för att säkerställa <br> vad som behövs göras vid tvist, konkurs <br> eller som underlag för vidare planering</h1>
 						<p>
-							Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren?
-							<br>
-							Då kan en garantibesiktning behövas.
+							Beställ en statusbesiktning för att få en bedömning på det byggnadstekniska <br>
+							skicket av BRF:ens fastighet eller installation/er.
 						</p>
-						<a href="#boka"><button type="button" name="button" class="common-Button text-blue bold">kontakta mig</button> </a>
+						<a href="#boka"><button type="button" name="button" class="common-Button text-blue bold">Begär offert</button> </a>
 					</div>
 
 				</div>
@@ -237,7 +231,7 @@
 				<div class="fix-10-12">
 					<div class="col-5-12 center">
 						<h3 class="common-BodyTitle" style="margin-top: 25px;">Vi har sedan 2003 arbetat som ett oberoende besiktningsföretag.</h3>
-						<p class="common-BodyText">Och besiktigat ett stort antal fristående bostadsrättsföreningar,<br> bland annat de byggda av:</p>
+						<p class="common-BodyText">Besiktningsman.se har utfört tusentals besiktningar åt bland annat:</p>
 						<ul class="flex grid later equal">
 							<li class="col-3-12 equalElement margin-bottom-1">
 								<img src="../../../assets/img/logos/riksbyggen.svg" alt="RIKSBYGGEN" style="width: 140px;">
@@ -266,26 +260,61 @@
 
 					<div class="col-5-12">
 						<div class="center">
-							<h2 class="common-IntroText">Varför göra en Garantibesiktning med Besiktningsman.se?</h2>
-							<p class="common-BodyText">Om du har en BRF som är nybyggd eller haft renoveringsarbeten utförda för mindre än 2 år sedan så gäller en avtalsmässig garantitid, vilket ger dig rätten att påkalla en garantibesiktning för att se om fel
-								framträtt.</p>
-							<p class="common-BodyText margin-bottom-5">Om det visar sig att fel har framträtt då blir entreprenören skyldig till att åtgärda felen - vilket inte ska kosta bostadsrättsföreningen något.</p>
-
-							<ul class="flex">
+							<h2 class="common-IntroText">Varför anlita Besiktningsman.se att utföra en statusbesiktning?</h2>
+							<p class="common-BodyText margin-bottom-5">
+								Om ni vill veta i vilket skick fastigheten är eller är osäkra på vad som skall göras och i vilken ordning,
+								är det bra att få en statusbesiktning utförd. Det behöver inte bara vara fråga om renovering eller
+								ombyggnad utan kan också avse installationer såsom exempelvis el, ventilation och rör.
+							</p>
+							<ul class="flex margin-bottom-3">
 								<li class="col-4-12">
-									<img src="../../../assets/svg/scope_icon.svg" alt="Ikon som illusterar bilagor" style="width:80px;">
-									<h3 class="equalElement common-BodyTitle">Insikt</h3>
-									<p class="common-BodyText">Dubbelkolla att allt står rätt till av en oberoende besiktningsman.</p>
+									<img src="../../../assets/svg/digital_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
+									<h3 class="equalElement common-BodyTitle">100% Digitala</h3>
+									<p class="common-BodyText">
+										Våra erfarna och välutbildade besiktningsmän är de enda inom branschen
+										som arbetar helt digitalt med besiktningsappen iSpect.
+									 </p>
+								</li>
+
+								<li class="col-4-12">
+									<img src="../../../assets/svg/iSpectSquare_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
+									<h3 class="equalElement common-BodyTitle">iSpect</h3>
+									<p class="common-BodyText">
+										Med hjälp av vår besiktningsportal iSpect får ni felbilagan samma dag och komplett utlåtande inom 3 dagar. Dvs inga väntetider eller administrativt krångel!
+									</p>
 								</li>
 								<li class="col-4-12">
-									<img src="../../../assets/svg/timer_icon.svg" alt="Ikon som illusterar bilagor" style="width:80px;">
-									<h3 class="equalElement common-BodyTitle">Spara tid</h3>
-									<p class="common-BodyText">Upptäck fel innan garantitiden löper ut.</p>
+									<img src="../../../assets/svg/digitalHead_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
+									<h3 class="equalElement common-BodyTitle">Erfarenhet</h3>
+									<p class="common-BodyText">
+										Vi har cirka 30 välutbildade medarbetare med gedigen <br> bakgrund från byggsektorn och besiktningsarbete.
+										<br>
+										Det ger oss kapacitet att möta mycket höga kundkrav.
+									</p>
+								</li>
+							</ul>
+							<ul class="flex">
+								<li class="col-4-12">
+									<img src="../../../assets/svg/scope_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
+									<h3 class="equalElement common-BodyTitle">Opartisk besiktning</h3>
+									<p class="common-BodyText">
+										Genom att anlita oss får ni besiktningen utförd av en oberoende besiktningsman.
+									</p>
+								</li>
+								<li class="col-4-12">
+									<img src="../../../assets/svg/timer_icon.svg" alt="Ikon som illusterar tidsbesparning" style="width:80px;">
+									<h3 class="equalElement common-BodyTitle">Snabbt avhjälpande</h3>
+									<p class="common-BodyText">
+										Felbilagor direkt till entreprenörens smartphone med återrapportering för ett snabbt
+										och kostnadseffektivt avhjälpande.
+									</p>
 								</li>
 								<li class="col-4-12">
 									<img src="../../../assets/svg/lists_icon.svg" alt="Ikon som illusterar bilagor" style="width:110px;">
-									<h3 class="equalElement common-BodyTitle">Snabb tillgång</h3>
-									<p class="common-BodyText">Få felbilagan samma dag och utlåtandet inom 3 dagar.</p>
+									<h3 class="equalElement common-BodyTitle">Dokumenthantering</h3>
+									<p class="common-BodyText">
+										Ni får tillgång till alla era digitala utlåtanden i 10 år, via ert konto i iSpect.
+									</p>
 								</li>
 							</ul>
 						</div>
@@ -299,64 +328,54 @@
 	<section class="slide whiteSlide autoHeight margin-top-1" id="steg">
 		<div class="content">
 			<div class="container-lg">
-
-				<div class="fix-12-12 center">
-					<h2 class="common-IntroText">Hur går en Garantibesiktning till?</h2>
+				<div class="fix-12-12 center margin-bottom-10">
+					<h2 class="common-IntroText">Hur går en Statusbesiktning till?</h2>
 					<br>
 					<br>
 					<ul class="grid later equal left">
 						<li class="col-4-12 equalElement">
 							<div class="fun-fact">1</div>
 							<div class="" style="margin-left: 80px;">
-								<h3 class="common-BodyTitle">Uppstartsmöte</h3>
-								<p class="fix-4-12 toLeft common-BodyText">BRF:ens styrelse får träffa projektansvarig & huvudbesiktningsman - Samt få information om besiktningen.</p>
+								<h3 class="common-BodyTitle">Startsammanträde</h3>
+								<p class="fix-4-12 toLeft common-BodyText">Besiktningen börjar med att besiktningsmannen går igenom handlingar och egenkontroller på utförda arbeten samt informerar om hur besiktningen går till.</p>
 							</div>
 						</li>
 						<li class="col-4-12 equalElement">
 							<div class="fun-fact">2</div>
 							<div class="" style="margin-left: 80px;">
-								<h3 class="common-BodyTitle">Startsammanträde</h3>
-								<p class="fix-4-12 toLeft common-BodyText">Besiktningen börjas med ett startmöte med BRF:ens styrelse & entreprenörer.</p>
+								<h3 class="common-BodyTitle">Besiktning påbörjas</h3>
+								<p class="fix-4-12 toLeft common-BodyText">Fastigheten besiktas okulärt i förhållande till vad som är avtalat och utfört enligt gällande myndighetskrav samt branschregler.</p>
 							</div>
 						</li>
 						<li class="col-4-12 equalElement">
 							<div class="fun-fact">3</div>
 							<div class="" style="margin-left: 80px;">
-								<h3 class="common-BodyTitle">Besiktning påbörjas</h3>
-								<p class="fix-4-12 toLeft common-BodyText">Besiktningsmannen kommer att undersöka hela huset och avgöra om det framträtt några nya byggfel i fastigheten.</p>
+								<h3 class="common-BodyTitle">Synpunkter noteras</h3>
+								<p class="fix-4-12 toLeft common-BodyText">Under besiktning får alla möjligheten att framföra synpunkter.</p>
 							</div>
 						</li>
 						<li class="col-4-12">
 							<div class="fun-fact">4</div>
 							<div class="" style="margin-left: 80px;">
-								<h3 class="common-BodyTitle">Synpunkter noteras</h3>
-								<p class="fix-4-12 toLeft common-BodyText">Kontraktsparterna, BRF:ens styrelse och entreprenörerna får möjlighet att framföra synpunkter under besiktningen.</p>
+								<h3 class="common-BodyTitle">Slutsammanträde</h3>
+								<p class="fix-4-12 toLeft common-BodyText">Besiktningsmannen meddelar om vilka brister det finns i konstruktionerna/en och/eller installationerna/en. </p>
 							</div>
 						</li>
 						<li class="col-4-12 equalElement">
 							<div class="fun-fact">5</div>
 							<div class="" style="margin-left: 80px;">
-								<h3 class="common-BodyTitle">Slutsammanträde</h3>
-								<p class="fix-4-12 toLeft common-BodyText">Besiktningsmannen informerar alla om vad som behöver åtgärdas enligt utlåtandet. </p>
+								<h3 class="common-BodyTitle">Utlåtande</h3>
+								<p class="fix-4-12 toLeft common-BodyText">Parter har direkt vid färdig besiktning tillgång till felbilaga i vår iSpectportal och komplett utlåtande inom 3 dagar - Vilket kommer att finnas tillgänglig i 10 år.</p>
 							</div>
 						</li>
-						<li class="col-4-12">
-							<div class="fun-fact">6</div>
+						<li class="col-4-12 equalElement">
+							<div class="fun-fact">✓</div>
 							<div class="" style="margin-left: 80px;">
-								<h3 class="common-BodyTitle">Utlåtande</h3>
-								<p class="fix-4-12 toLeft common-BodyText">Felbilagan finns tillgänglig omgående efter besiktningen och komplett utlåtande levereras inom 3 arbetsdagar.</p>
+								<p class="fix-4-12 toLeft common-BodyText">Nu har du en klar bild av det byggnadstekniska skicket av er fastighet - Inklusive juridiskt underlag som styrker detta.</p>
 							</div>
 						</li>
 					</ul>
-					<div class="container-lg margin-top-1 margin-bottom-5">
-						<div class="box-CTA">
-							<img src="../../../assets/svg/checkmark_icon.svg" alt="✓">
-							<h2>Nu är entreprenören skyldig till att <br> åtgärda de fel som noterats av besiktningsmannen!</h2>
-						</div>
-					</div>
-
 				</div>
-
 			</div>
 		</div>
 	</section>
@@ -381,7 +400,7 @@
 			</div>
 			<div class="secondary-column">
 				<div class="customers">
-					<p class="copy-1 common-BodyTitle">Säkra din fastighet innan garantin löper ut.</p>
+					<p class="copy-1 common-BodyTitle">Vi är de enda inom branschen som levererar digitala felbilagor direkt efter besiktningen - med iSpect!</p>
 					<p class="copy-2 common-BodyText">Gör som många andra och anlita Besiktningsman.se</p>
 					<ul class="customer-logos">
 						<li class="customer-logo">
@@ -417,27 +436,24 @@
 							<li class="col-6-12 fromBottomLeft">
 								<h3 class="common-BodyTitle">Vi har sedan 2012 arbetat med vår egen besiktningsplattform iSpect.</h3>
 								<p class="common-BodyText">
-									Det betyder att vi arbetar digitalt med alla besiktningar som vi utför runtom i Sverige.
-									<br>
-									Det innebär att vi via iSpect har full koll på vilka fel som brukar dyka upp under garantitiden för din BRF, beroende på hur den byggdes, och vart i landet byggnaden står.
+									Det betyder att vi utför besiktningar digitalt med iSpect runtom i Sverige.
+									I iSpect:s feldatabas har vi trehundra tusen av de vanligaste förekommande felen vid nyproduktion och rot.
 								</p>
 							<li class="col-6-12 bottom">
-								<img src="../../../assets/img/backgrounds/bm_goran.jpg" class="soft-shadow img-border-radius" alt="Foto av besiktningsman" />
+								<img src="../../../assets/img/backgrounds/inspectorIpad.JPG" class="soft-shadow img-border-radius" alt="Foto av besiktningsman" />
 							</li>
 						</ul>
 					</div>
 					<div class="fix-10-12 margin-bottom-5">
 						<ul class="flex left">
 							<li class="col-6-12 fromBottomLeft">
-								<h3 class="common-BodyTitle">När våra besiktningsmän utför en besiktning av din BRF så kommer den utföras med hjälp av iSpect.</h3>
+								<h3 class="common-BodyTitle">När våra besiktningsmän utför en besiktning av ett byggmoment så kommer den utföras med hjälp av iSpect.</h3>
 								<p class="common-BodyText">
-									Direkt efter besiktningen utförts får ni en komplett felbilaga med alla upptäckta brister.
-									<br>
-									3 dagar senare levererar vi det kompletta utlåtandet över besiktningen,
-									så att ni kan vara trygga i att alla eventuella garantiärenden är dokumenterade korrekt så att de kan åtgärdas.
+									Direkt efter att besiktningen utförts får ni en komplett felbilaga i iSpectportal, samt status på det byggnadstekniska skicket av fastigheten.
+									Därmed kan ni påbörja er planering med besiktningsutlåtandet som utgångspunkt.
 								</p>
 							<li class="col-6-12 bottom">
-								<img src="../../../assets/img/backgrounds/bm_two.jpg" class="soft-shadow img-border-radius" alt="Foto av besiktningsman" />
+								<img src="../../../assets/img/backgrounds/inspectorFloor.JPG" class="soft-shadow img-border-radius" alt="Foto av besiktningsman" />
 							</li>
 						</ul>
 					</div>
