Linked new type form

--- a/tjanster/brf/statusbesiktning/index.html
+++ b/tjanster/brf/statusbesiktning/index.html
@@ -386,7 +386,7 @@
 			<div class="mobileContactButtonFix">
 				<h3>Redo att boka?</h3>
 				<p>Fyll i formuläret så kontaktar vi dig.</p>
-				<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/BAbQjy" data-mode="popup" target="_blank">Kontakta mig </a>
+				<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/GR6rvN" data-mode="popup" target="_blank">Kontakta mig </a>
 				<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 			</div>
 			<!-- original typeform -->
@@ -395,7 +395,7 @@
 					Redo att boka?
 					<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
 				</h3>
-				<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/BAbQjy" data-hide-headers=true style="width: 100%; height: 400px;"></div>
+				<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/GR6rvN" data-hide-headers=true style="width: 100%; height: 400px;"></div>
 				<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 			</div>
 			<div class="secondary-column">
