--- a/tjanster/brf/statusbesiktning/index.html
+++ b/tjanster/brf/statusbesiktning/index.html
@@ -9,18 +9,18 @@
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../../../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Statusbesiktning Meta Description Text" />
+	<meta name="description" content="Statusbesiktning är verktyget för att säkerställa vad som behövs göras vid tvist, konkurs eller som underlag för vidare planering." />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Statusbesiktning OG: Title Text" />
-	<meta property="og:description" content="Statusbesiktning OG: Description Text" />
+	<meta property="og:title" content="Statusbesiktning är verktyget för att säkerställa vad som behövs göras vid tvist, konkurs <br> eller som underlag för vidare planering" />
+	<meta property="og:description" content="Beställ en statusbesiktning för att få en bedömning på det byggnadstekniska skicket av BRF:ens fastighet eller installation/er." />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/statusbesiktning" />
 	<meta property="og:site_name" content="https://www.besiktningsman.se">
 	<meta property="og:image" content="../../../assets/img/backgrounds/og_image.png" />
-	<meta name="twitter:title" content="Statusbesiktning twitter: Title Text" />
-	<meta name="twitter:description" content="Statusbesiktning twitter: Description Text" />
+	<meta name="twitter:title" content="Statusbesiktning är verktyget för att säkerställa <br> vad som behövs göras vid tvist, konkurs <br> eller som underlag för vidare planering" />
+	<meta name="twitter:description" content="Beställ en statusbesiktning för att få en bedömning på det byggnadstekniska skicket av BRF:ens fastighet eller installation/er." />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
