e>sb subpage had the wrong service title...

--- a/tjanster/entreprenad/slutbesiktning/index.html
+++ b/tjanster/entreprenad/slutbesiktning/index.html
@@ -335,7 +335,7 @@
 			<div class="container-lg">
 
 				<div class="fix-12-12 center">
-					<h2 class="common-IntroText">Hur går en Fortlöpande besiktning till?</h2>
+					<h2 class="common-IntroText">Hur går en Slutbesiktning besiktning till?</h2>
 					<br>
 					<br>
 					<ul class="grid later equal left">
