Added link to status page on brf landing page

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -280,6 +280,11 @@
 							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
 							Garantibesiktning - 2-årsbesiktning
 						</a>
+						<a href="../brf/statusbesiktning/" class="common-Button text-blue"
+						style="">
+							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
+							Statusbesiktning
+						</a>
 						<div class="accordion">
 							<h3>Förbesiktning</h3>
 							<div>
