Brf sb steps to take text update

--- a/tjanster/brf/statusbesiktning/index.html
+++ b/tjanster/brf/statusbesiktning/index.html
@@ -337,14 +337,14 @@
 							<div class="fun-fact">1</div>
 							<div class="" style="margin-left: 80px;">
 								<h3 class="common-BodyTitle">Startsammanträde</h3>
-								<p class="fix-4-12 toLeft common-BodyText">Besiktningen börjar med att besiktningsmannen går igenom handlingar och egenkontroller på utförda arbeten samt informerar om hur besiktningen går till.</p>
+								<p class="fix-4-12 toLeft common-BodyText">Vi börjar med en genomgång tillsammans med er, vad ni känner till om fastigheten, tidigare renoveringar etc, och om det finns vissa byggnadsdelar som ni känner extra oro för.</p>
 							</div>
 						</li>
 						<li class="col-4-12 equalElement">
 							<div class="fun-fact">2</div>
 							<div class="" style="margin-left: 80px;">
 								<h3 class="common-BodyTitle">Besiktning påbörjas</h3>
-								<p class="fix-4-12 toLeft common-BodyText">Fastigheten besiktas okulärt i förhållande till vad som är avtalat och utfört enligt gällande myndighetskrav samt branschregler.</p>
+								<p class="fix-4-12 toLeft common-BodyText">Därefter undersöker vi synliga ytor i samtliga tillgängliga utrymmen i förhållande till vad som är avtalat och utfört enligt gällande myndighetskrav samt branschregler.</p>
 							</div>
 						</li>
 						<li class="col-4-12 equalElement">
