Additional text updates for statusbes

--- a/tjanster/brf/statusbesiktning/index.html
+++ b/tjanster/brf/statusbesiktning/index.html
@@ -262,9 +262,7 @@
 						<div class="center">
 							<h2 class="common-IntroText">Varför anlita Besiktningsman.se att utföra en statusbesiktning?</h2>
 							<p class="common-BodyText margin-bottom-5">
-								Om ni vill veta i vilket skick fastigheten är eller är osäkra på vad som skall göras och i vilken ordning,
-								är det bra att få en statusbesiktning utförd. Det behöver inte bara vara fråga om renovering eller
-								ombyggnad utan kan också avse installationer såsom exempelvis el, ventilation och rör.
+Om ni vill veta i vilket skick fastigheten är eller är osäkra på vad som skall göras och i vilken ordning, är det bra att få en statusbesiktning utförd. Det behöver inte bara vara fråga om renovering eller ombyggnad utan kan också avse installationer såsom exempelvis el, ventilation och rör. Besiktningsutlåtandet kan ni sedan använda som stöd för framtida underhåll, ombyggnads- eller renoveringsprojekt. 
 							</p>
 							<ul class="flex margin-bottom-3">
 								<li class="col-4-12">
@@ -371,7 +369,8 @@
 						<li class="col-4-12 equalElement">
 							<div class="fun-fact">✓</div>
 							<div class="" style="margin-left: 80px;">
-								<p class="fix-4-12 toLeft common-BodyText">Nu har du en klar bild av det byggnadstekniska skicket av er fastighet - Inklusive juridiskt underlag som styrker detta.</p>
+								<h3 class="common-BodyTitle">Avslut</h3>
+								<p class="fix-4-12 toLeft common-BodyText">Nu har ni en klar bild av det byggnadstekniska skicket av er fastighet - Inklusive juridiskt underlag som styrker detta.</p>
 							</div>
 						</li>
 					</ul>
